--- a/index.html
+++ b/index.html
@@ -209,6 +209,26 @@
               <p><em>Our Lady of Fatima University - Pampanga Campus</em></p>
               </div>
           </div>
+
+          <h3 class="resume-title">Certifications</h3>
+            <div class="resume-item">
+              <h4>Training Certificates</h4>
+              <h5>2021 - Present</h5>
+              <p><em> PCAP: Programming Essentials in Python (Cisco Networking Academy)</em></p>
+              <p><em> NDG Linux Essentials (Cisco Networking Academy)</em></p>
+              <p><em> Emerging Technologies Workshop: Model Driven Programmability (Cisco Networking Academy)</em></p>
+              <p><em> Cybersecurity Essentials (Cisco Networking Academy)</em></p>
+              </div>
+            <div class="resume-item">
+              <h4>Seminar Certificates</h4>
+              <h5>2019 - 2021</h5>
+              <p><em>WORK-LIFE BALANCE: WHY IT MATTERS? CREATING LOGO DESIGN USING ADOBE ILLUSTRATOR</em></p>
+              <p><em> EVELOPER PRODUCTIVITY TOOLS LARAVEL FRAMEWORK FROM CAMPUS TO CAREER: A GUIDE TO LIFE AFTER COLLEGE</em></p>
+              <p><em>  Server Administration in the New Normal </em></p>
+              <p><em>  AI Marketing and Sentence Computer with PHP and Open AI GPT-3 for Beginners</em></p>
+              <p><em> Sustainable Technology, Engineering and Maritime Conference (STEAM 2023)</em></p>
+              </div>
+          </div>
           
 
       </div>
