--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Jester Tommy Inocelda</h1>
-      <p>Experiences in <span class="typed" data-typed-items="Full-stack Developing, Back-end Web Developing, Front-end Web Developing, Software Developing"></span></p>
+      <p>Experiences in <span class="typed" data-typed-items="Full-stack Development, Back-end Web Development, Front-end Web Development, Software Development"></span></p>
     </div>
   </section><!-- End Hero -->
 
