--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>College</h4>
-              <h5>2021 - Present</h5>
+              <h5>2021 - 2024</h5>
               <p><em>Our Lady of Fatima University - Pampanga Campus</em></p>
               </div>
             <div class="resume-item">
@@ -211,6 +211,10 @@
           </div>
 
           <h3 class="resume-title">Certifications</h3>
+           <div class="resume-item">
+             <p><em>IT Operations (On-The-Job Training) 500 Hours /em></p>
+             <p>February 05 ,2024 - May 21 ,2024</p>
+           </div>
             <div class="resume-item">
               <h4>Training Certificates</h4>
               <p><em> PCAP: Programming Essentials in Python (Cisco Networking Academy)</em></p>
