--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
           <h3 class="resume-title">Certifications</h3>
            <div class="resume-item">
-             <p><em>IT Operations (On-The-Job Training) 500 Hours /em></p>
+             <p><em>IT Operations (On-The-Job Training) 500 Hours </em></p>
              <p>February 05 ,2024 - May 21 ,2024</p>
            </div>
             <div class="resume-item">
