--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>This is the skillset i acquired through my academic journey</p>
+          <p>This is the skillset i acquired through my academic journey and experience in freelancing</p>
         </div>
 
         <div class="row skills-content">
@@ -211,7 +211,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Jester Tommy Inocelda</h4>
-              <p><em>BSIT student passionate about back-end development, seeking opportunities to apply programming skills and analytical mindset. Committed to innovation, efficiency, and continuous learning in the dynamic field of back-end development.</em></p>
+              <p><em>BSIT Graduate passionate about back-end development, seeking opportunities to apply programming skills and analytical mindset. Committed to innovation, efficiency, and continuous learning in the dynamic field of back-end development.</em></p>
               <ul>
                 <li>Balsic, Hermosa, Bataan</li>
                 <li>+639398898211</li>
@@ -274,7 +274,7 @@
         <div class="section-title">
           <h2>Portfolio</h2>
           <p>
-            Welcome to my academic portfolio—a snapshot of my intellectual journey throughout my academic years. These projects reflect my growth, curiosity, and interdisciplinary approach. From initial explorations to more advanced undertakings, each entry marks a milestone in my academic development. Dive in to witness the evolution of theoretical concepts into tangible outcomes, showcasing my analytical acumen and commitment to addressing real-world challenges. This portfolio is a brief glimpse into my academic identity and the transformative threads woven through my educational experiences.</p>
+            Welcome to my academic portfolio—a snapshot of my intellectual journey throughout my academic years. These projects reflect my growth, curiosity, and interdisciplinary approach. From initial explorations to more advanced undertakings, each entry marks a milestone in my academic development. Dive in to witness the evolution of theoretical concepts into tangible outcomes, showcasing my analytical acumen and commitment to addressing real-world challenges. This portfolio is a brief glimpse into my academic identity and the transformative threads woven through my educational experiences. Freelancing Experience</p>
         </div>
 
         <div class="row" data-aos="fade-up">
