--- a/index.html
+++ b/index.html
@@ -177,6 +177,13 @@
               </div>
             </div>
 
+             <div class="progress">
+              <span class="skill">Pocketbase <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
             <div class="progress">
               <span class="skill">SQL/Database Management <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
