--- a/portfolio-photo.html
+++ b/portfolio-photo.html
@@ -118,6 +118,14 @@
                 <div class="swiper-slide">
                     <img src="assets/img/portfolio/photoedit12.jpg" alt="">
                   </div>
+                
+                <div class="swiper-slide">
+                    <img src="assets/img/portfolio/photoedit13.png" alt="">
+                  </div>
+                
+                <div class="swiper-slide">
+                    <img src="assets/img/portfolio/photoedit14.png" alt="">
+                  </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
