--- a/index.html
+++ b/index.html
@@ -298,15 +298,18 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cap">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Garbs.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/Garbs.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-smartgarbin.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+          <a href="portfolio-smartgarbin.html" title="More Details" class="portfolio-link-wrapper">
+  <div class="col-lg-4 col-md-6 portfolio-item filter-cap">
+    <div class="portfolio-wrap">
+      <img src="assets/img/portfolio/Garbs.png" class="img-fluid" alt="">
+      <div class="portfolio-links">
+        <a href="assets/img/portfolio/Garbs.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+        <a href="portfolio-smartgarbin.html" title="More Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
+  </div>
+</a>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
