--- a/portfolio-photo.html
+++ b/portfolio-photo.html
@@ -126,6 +126,10 @@
                 <div class="swiper-slide">
                     <img src="assets/img/portfolio/photoedit14.png" alt="">
                   </div>
+
+                <div class="swiper-slide">
+                    <img src="assets/img/portfolio/photoedit15.png" alt="">
+                  </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
