--- a/index.html
+++ b/index.html
@@ -352,6 +352,15 @@
             </div>
           </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-edit">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/videoedit.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://www.facebook.com/K45kyzeeePS" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-edit">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/photoedit6.png" class="img-fluid" alt="">
