--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-cap">FreeLance</li>
               <li data-filter=".filter-cap">Capstone</li>
               <li data-filter=".filter-web">Web Development</li>
               <li data-filter=".filter-soft">Software Development</li>
@@ -303,6 +304,15 @@
               <img src="assets/img/portfolio/Garbs.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="portfolio-smartgarbin.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/freelance.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="portfolio-freelance.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
