--- a/portfolio-freelance.html
+++ b/portfolio-freelance.html
@@ -71,7 +71,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2><b>Freelance Business Menu and Ordering with POS System</b></h2>
+          <h2><b>Menu and Ordering System with POS</b></h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfoio Details</li>
@@ -89,15 +89,19 @@
 
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper">
-              <div>
+              <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                    <video width="100%" height="100%" controls>
-                        <source src="assets/img/portfolio/empsal-vid.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
+                  <img src="assets/img/portfolio/capstonelog.jpg" alt="">
                 </div>
-            
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/capstonegarb.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/capstonegarbs.jpg" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -108,15 +112,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Role</strong>: Full-stack Developer</li>
-                <li><strong>Category</strong>: Object Oriented Programming II Final Project</li>
+                <li><strong>Role</strong>: Full-stack Developer & Principal Investigator</li>
+                <li><strong>Category</strong>: Capstone</li>
                 <li><strong>University</strong>: Our Lady of Fatima University - Pampanga Campus</li>
-                <li><strong>Project date</strong>: June 2022</li>
+                <li><strong>Project date</strong>: December 2023</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Employee Attendance and Salary</h2>
-              <p>Attendance Management System is software developed for daily employees attendance in company. It facilitates to access the attendance information of a particular employee in a particular class. The information is sorted by the operators, which will be provided by us for a particular class. This system will also help in evaluating attendance eligibility criteria of a employee. Since ages, attendance system has remained one of the most important systems for evaluating the working time of employees in companies. In short, this project is used to mark the number of days present/absent.</p>
+              <h2>Smart Garbin: Real Time Garbage Monitoring and Segregation Using Arduino based on Internet of Things              </h2>
+              <p>
+                An advanced web-based waste management system, it notifies staff of approaching full bins, automates waste segregation with sensors and servo motors, and delivers detailed reports through an admin dashboard for enhanced efficiency.              </p>
             </div>
           </div>
 
