--- a/portfolio-freelance.html
+++ b/portfolio-freelance.html
@@ -92,15 +92,63 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/capstonelog.jpg" alt="">
+                  <img src="assets/img/portfolio/q1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/capstonegarb.png" alt="">
+                  <img src="assets/img/portfolio/q2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/capstonegarbs.jpg" alt="">
+                  <img src="assets/img/portfolio/q3.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q4.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q5.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q6.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q7.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q8.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q9.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q10.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q11.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q12.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q13.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q14.png" alt="">
+                </div>
+
+                  <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q15.png" alt="">
                 </div>
 
               </div>
@@ -112,16 +160,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Role</strong>: Full-stack Developer & Principal Investigator</li>
-                <li><strong>Category</strong>: Capstone</li>
-                <li><strong>University</strong>: Our Lady of Fatima University - Pampanga Campus</li>
-                <li><strong>Project date</strong>: December 2023</li>
+                <li><strong>Role</strong>: Full-stack Developer</li>
+                <li><strong>Category</strong>: Freelancer</li>
+                <li><strong>Project date</strong>: August 2024</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Smart Garbin: Real Time Garbage Monitoring and Segregation Using Arduino based on Internet of Things              </h2>
+              <h2>Menu and Ordering System with POS</h2>
               <p>
-                An advanced web-based waste management system, it notifies staff of approaching full bins, automates waste segregation with sensors and servo motors, and delivers detailed reports through an admin dashboard for enhanced efficiency.              </p>
+               This Website is a versatile menu and ordering system with built-in POS, designed to support multiple businesses. Our platform allows businesses to easily register, customize menus, and manage orders—all in one place. With features like menu personalization, seamless online ordering, and a powerful POS system, [Platform Name] streamlines operations for restaurants, cafés, and retail stores, helping businesses connect with customers efficiently and effectively.              </p>
             </div>
           </div>
 
