--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-cap">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Garbs.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/q1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="portfolio-smartgarbin.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-freelance.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
