--- a/portfolio-freelance.html
+++ b/portfolio-freelance.html
@@ -151,6 +151,18 @@
                   <img src="assets/img/portfolio/q15.png" alt="">
                 </div>
 
+                 <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q16.png" alt="">
+                </div>
+
+                 <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q17.png" alt="">
+                </div>
+
+                 <div class="swiper-slide">
+                  <img src="assets/img/portfolio/q18.png" alt="">
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
